# py_mal

./: .coverage  .ruff.toml  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  SUPPORT.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  style.yml  tests.yml
scripts/batch/: install_py.sh  run_silent.vbs
scripts/powershell/: install_py.ps1
scripts/shell/: install_py.sh  run_silent.sh
src/data_scrape/: browser_detector.py  browser_utils.py  cli.py  data_scrape.py  models.py  utils.py
src/ld/: README.md  ld.py.bkp
src/rat/: cli.py
src/rat/client/: viewer.py
src/rat/common/: schemas.py
src/rat/server/: capture.py  executor.py  stream.py
src/rev_shell/: cli.py  client.py  config.py  logger.py
tests/: conftest.py
tests/rat/: conftest.py
tests/rat/integration/: test_protocol.py  test_rat_flow.py
tests/rat/smoke/: test_imports.py
tests/rat/unit/: test_cli.py  test_config.py  test_rat.py  test_screen.py  test_viewer.py
tests/rev_shell/: conftest.py
tests/rev_shell/integration/: test_shell_conn.py
tests/rev_shell/smoke/: test_imports.py
tests/rev_shell/unit/: test_cli.py  test_client.py  test_config.py  test_logger.py  test_shell.py
